Fix box shadow overflow

--- a/web/wp-content/plugins/mhm_customize_twentyseventeen/Foundation/src/assets/scss/components/_sponsors.scss
+++ b/web/wp-content/plugins/mhm_customize_twentyseventeen/Foundation/src/assets/scss/components/_sponsors.scss
@@ -6,7 +6,7 @@ $bronze:    #8c7853;
 
     // https://github.com/WPSwitzerland/wordcampbern2017/issues/7
     background: #fff;
-    box-shadow: -750px 0 0 0 #fff, 750px 0 0 0 #fff; /* left/right overflow */
+    box-shadow: -600px 0 0 0 #fff, 600px 0 0 0 #fff; /* left/right overflow */
 
     h2 {
         padding: 1rem 0;
